# ML-WebCrawler

./: .gitignore  Deinopis.py  Dockerfile  ExportManager.py  GSParser.py  GSReadAndWrite.py  Hawkeyes.py  JSONManager.py  Login.py  LoginManager.py  ML_WebCrawler.py  Objects.py  Parser.py  SheetManager.py  StatManager.py  TODO.txt  WebCrawler.py  docker-compose.yml  players.json  pyproject.toml  requirements.txt
DataCollection/: data_collector.py  export_manager.py  json_manager.py  login_manager.py  objects.py  sheet_manager.py  stat_manager.py  web_crawler.py
DataProcessing/: data_processor.py  json_manager.py  search_processor.py
cache/: app_data.json  precomputed_stats.json  precomputed_stats_Amanda.json  precomputed_stats_Caleb.json  precomputed_stats_Dorothy.json  precomputed_stats_Lia.json  precomputed_stats_Lindsay.json  precomputed_stats_Magnolia.json  precomputed_stats_Mike.json  precomputed_stats_Nate.json  precomputed_stats_Ola.json  precomputed_stats_Rick.json  precomputed_stats_Rose.json  precomputed_stats_Saa.json  precomputed_stats_Sarah.json  precomputed_stats_Steve.json  precomputed_stats_Tobi.json
src/: cache_builder.py  config_settings.py  league_info.py  main.py  matrix.py  player_stats.py  rounds.py  song_check.py  standings.py
src/cache/: app_data.json  avatars.json  config.json  players.json  precomputed_stats_Dorothy.json  precomputed_stats_Mike.json  precomputed_stats_Ola.json  precomputed_stats_Rose.json  precomputed_stats_Sarah.json  rounds.json
src/data_collection/: data_collector.py  export_manager.py  login_manager.py  objects.py  (+1 more)
(+38 files in other folders)
