[project]
name = "Eric"
version = "0.1.0"
description = "Music League Webcrawler and Stat Organizer"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "ioicaleb", email = "ioicaleb12@gmail.com" }
]
dependencies = [
    "flet>=0.86.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.86.0",
    "flet-desktop>=0.86.0",
    "flet-web>=0.86.0",
    # Integration testing with `flet test` / pytest. The `test` extra brings in
    # pytest, pytest-asyncio and the screenshot-comparison dependencies.
    "flet[test]>=0.86.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.flet]
desktop_flavor = "full"    # Change to "full" to use flet-audio and flet-video
org = "com.mycompany"
product = "ml-webcrawler"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.metadata]
title = "Eric"
controls = ["SafeArea", "Column", "Container", "Text", "ListTile", "Icon", "AppBar", "Row"]
layout_pattern = "gallery"
complexity = "basic"